--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "name": "bitflag",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Manage bit flags",
   "main": "index.js",
   "scripts": {
     "test": "make test"
   },
   "author": "Joseph Werle <joseph.werle@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jwerle/bitflag.git"
+  },
+  "keywords": [
+    "bit",
+    "flag",
+    "bit",
+    "wise"
+  ],
+  "bugs": {
+    "url": "https://github.com/jwerle/bitflag/issues"
+  }
 }
