--- a/package.json
+++ b/package.json
@@ -1,24 +1,8 @@
 {
-  "name": "bitflag",
-  "version": "0.0.4",
+  "name": "jwerle-bitflag",
   "description": "Manage bit flags",
-  "main": "index.js",
-  "scripts": {
-    "test": "make test"
-  },
-  "author": "Joseph Werle <joseph.werle@gmail.com>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/jwerle/bitflag.git"
-  },
-  "keywords": [
-    "bit",
-    "flag",
-    "bit",
-    "wise"
-  ],
-  "bugs": {
-    "url": "https://github.com/jwerle/bitflag/issues"
-  }
+  "version": "0.0.4",
+  "keywords": [],
+  "dependencies": {},
+  "license": "MIT"
 }
